CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (CXXRT)
ENABLE_LANGUAGE (CXX)

set (CMAKE_CXX_FLAGS "-std=c++11 -O2 -Wall")

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

ADD_SUBDIRECTORY(src)
